# Streamlined_Sentiment_Analysis

./: .gitignore  README.md
notebooks/: Sentiment Analysis Model-TF-IDF.ipynb  Sentiment Analysis Model-Word Frequencies.ipynb  Sentiment Analysis Model.ipynb
sentiment_analysis/: pyproject.toml  sentiment.py  setup.py
sentiment_analysis/config/: config.py
sentiment_analysis/data/: load_reviews.py  review_processor.py
sentiment_analysis/features/: tf_idf.py  word_frequencies.py
sentiment_analysis/models/: model.py  predict.py  train.py
sentiment_analysis/utils/: data_management.py  train_test_split.py  word_tokenizer.py
