[tool.poetry]
name = "sentiment_analysis"
version = "1.0"
description = "Application of NLP and Genetic Algorithm in cipher decryption"
authors = ["Bowen"]
packages = [
	{ include = "sentiment_analysis", from = "./sentiment_analysis" },
]

[tool.poetry.dependencies]
python = "~3.7"
numpy = "*"
pandas = "*"
matplotlib = "*"
beautifulsoup4="*"
nltk = "*"
sklearn = "*"
lightgbm = "*"
shap = "*"

[tool.poetry.dev-dependencies]
black = "==19.3b0"
pytest = "*"